Fix – improving and simplifying the code.